<resources>
    <string name="app_name">Blog</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="add_new_image_cd">Add an image to the post</string>
    <string name="add_post_title">Add Post Title</string>
    <string name="add_post_desc">Add Post Description</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
